# sp1-zkvm-game

./: .gitignore  README.md  build.sh  cargo.toml
app/: globals.css  page.tsx
components/: time-loop-game.tsx
sp1/: Cargo.toml
sp1/src/: main.rs
src/: main.rs
